troubleshooting hamburger menu not rendering correctly on mobile

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,9 @@ header {
 	top: 0;
 	color: white;
 	background-color: #302c2c;
-	display: flex;
+	display: grid;
+	grid-template-rows: 1fr;
+	grid-template-columns: 2fr 1fr;
 	align-items: center;
 	justify-content: space-between;
 	height: 60px;
